_sass/_layout.scss
/**
 * Site header
 */

.site-nav {
    font-size: 80%;
    line-height: 48px;
    float: right;

    .menu-icon {
        display: none;
    }

    .page-link {
        color: $text-color;
        line-height: $base-line-height;

        // Gaps between nav items, but not on the first one
        &:not(:first-child) {
            margin-left: 20px;
        }
    }
}

.profile {
    #header {
        border-bottom: 1px solid $grey-color-dark;
        text-align: center;
        position: relative;
        padding-bottom: 5px;
    }

    #avatar {
        display: inline-block;
        width: 160px;
        height: 160px;
        border-radius: 50%;
        margin-bottom: $spacing-unit / 2;
    }

    h1 {
        font-weight: 600;
        letter-spacing: 1px;
        font-size: 24px;
        color: #222;
    }

    #description {
        text-align: left;
        font-weight: 400;

        a {
            text-decoration: underline;
        }
    }
    margin-bottom: $spacing-unit / 2;
}


/**
 * Site footer
 */
.site-footer {
    padding: $spacing-unit 0;
}

.footer-heading {
    font-size: 18px;
    margin-bottom: $spacing-unit / 2;
}

.contact-list,
.social-media-list {
    list-style: none;
    margin-left: 0;
}

.footer-col-wrapper {
    font-size: 15px;
    color: $grey-color;
    margin-left: -$spacing-unit / 2;
    @extend %clearfix;
}

.footer-col {
    float: left;
    margin-bottom: $spacing-unit / 2;
    padding-left: $spacing-unit / 2;
}

.footer-col-1 {
    width: -webkit-calc(35% - (#{$spacing-unit} / 2));
    width:         calc(35% - (#{$spacing-unit} / 2));
}

.footer-col-2 {
    width: -webkit-calc(20% - (#{$spacing-unit} / 2));
    width:         calc(20% - (#{$spacing-unit} / 2));
}

.footer-col-3 {
    width: -webkit-calc(45% - (#{$spacing-unit} / 2));
    width:         calc(45% - (#{$spacing-unit} / 2));
}

@include media-query($on-laptop) {
    .footer-col-1,
    .footer-col-2 {
        width: -webkit-calc(50% - (#{$spacing-unit} / 2));
        width:         calc(50% - (#{$spacing-unit} / 2));
    }

    .footer-col-3 {
        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
        width:         calc(100% - (#{$spacing-unit} / 2));
    }
}

@include media-query($on-palm) {
    .footer-col {
        float: none;
        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
        width:         calc(100% - (#{$spacing-unit} / 2));
    }
}



/**
 * Page content
 */

.page-heading {
    font-size: 20px;
}

.post-list {
    margin-left: 0;
    list-style: none;

    > li {
        margin-bottom: $spacing-unit;
        clear: both;
    }

    img {
        float: right;
        margin: 0px 0 40px 40px;
        max-width: 300px;
        height: auto;

        @include media-query($on-palm) {
            display: none;
        }
    }
}

.post-meta {
    font-size: $small-font-size;
    color: $grey-color;
}

.post-link {
    display: block;
    font-size: 24px;
}

.paginator {
    float: right;
    clear: both;
    margin-top: 40px;
}

.home {
    .url {
        float: right;
        font-style: italic;
        line-height: 38.4px;
        margin: 0;
    }

    hr {
        margin-bottom: $spacing-unit / 2;
        margin-top: -5px;
        border-style: solid;
        border-color: $grey-color-dark;
        border-width: inherit;
    }
}

.page-content .post, .page-content .home {
    border-bottom: 1px solid $grey-color-dark;
}


/**
 * Posts
 */
.post {
  img {
    padding-top: 10px;
    padding-bottom: 10px;
  }

  .tr-caption-container {
    padding-bottom: 10px;
    font-style: italic;
  }
}

.post-title {
    font-size: 42px;
    letter-spacing: -1px;
    line-height: 1;

    @include media-query($on-laptop) {
        font-size: 36px;
    }
}

.post-content {
    h2 {
        font-size: 32px;

        @include media-query($on-laptop) {
            font-size: 28px;
        }
    }

    h3 {
        font-size: 26px;

        @include media-query($on-laptop) {
            font-size: 22px;
        }
    }

    h4 {
        font-size: 20px;

        @include media-query($on-laptop) {
            font-size: 18px;
        }
    }

    a {
        text-decoration: underline;
    }
}



/**
 * Tags
 */
.tags {
    li {
        display: inline;
        list-style-type: none;
        float: left;
    }
}

.tags-page {
    li {
        display: inline;
        list-style-type: none;
        margin-right: 20px;
    }
}

.badge { background-color: #e6efc2; border-radius: 3.75em; color: #56651a; display: inline-block; font-size: 0.75em; font-weight: 600; line-height: 1; padding: 0.4em 1.2em; }

.inline {
    display: inline;
}

